[package]
name = "pengu-rust"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

[lib]
name = "core"
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[build-dependencies]
bindgen = "0.70"
fs_extra = "1.1"

[dependencies]
libc = "0.2"
msgbox = "0.7"

[dependencies.winapi]
version = "0.3"
features = [
    "basetsd",
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "memoryapi",
    "minwinbase",
    "minwindef",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "windef",
    "winnt",
    "winuser",
]
